--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             // Calculate the number of tree blocks needed
             let treeBlocks = Math.ceil(totalPlanks / 4);
 
-            document.getElementById('result').innerText = `You need to cut ${treeBlocks} tree blocks to get ${planks} planks and ${slabs} slabs.`;
+            // Calculate the number of stacks of tree blocks needed
+            let stacks = Math.ceil(treeBlocks / 64);
+
+            document.getElementById('result').innerText = `You need to cut ${treeBlocks} tree blocks (${stacks} stacks) to get ${planks} planks and ${slabs} slabs.`;
         }
     </script>
 </body>
