--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Minecraft Tree Calculator</title>
+    <title>The Official Dnoate Minecraft Tree Calculator</title>
 </head>
 <body>
-    <h1>Minecraft Tree Calculator</h1>
+    <h1></h1>
     <label for="planks">Number of Planks:</label>
     <input type="number" id="planks" name="planks">
     <br>
@@ -28,7 +28,7 @@
             // Calculate the number of stacks of tree blocks needed
             let stacks = Math.ceil(treeBlocks / 64);
 
-            document.getElementById('result').innerText = `You need to cut ${treeBlocks} tree blocks (${stacks} stacks) to get ${planks} planks and ${slabs} slabs.`;
+            document.getElementById('result').innerText = `You need to cut ${stacks} stacks (${treeBlocks} tree blocks) to get ${planks} planks and ${slabs} slabs.`;
         }
     </script>
 </body>
