--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Minecraft Tree Calculator</title>
+    <title>The Unofficial Dnoate Minecraft Tree Cutting Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Minecraft Tree Calculator</h1>
+    <h1>The Unofficial Dnoate Minecraft Tree Cutting Calculator</h1>
     <label for="planks">Number of Planks:</label>
     <input type="number" id="planks" name="planks">
     <br>
