--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>The Unofficial Dnoate Minecraft Tree Cutting Calculator</h1>
-    <label for="planks">Number of Planks:</label>
+    <label for="planks">Number of Acacia Planks:</label>
     <input type="number" id="planks" name="planks">
     <br>
-    <label for="slabs">Number of Slabs:</label>
+    <label for="slabs">Number of Acacia Slabs:</label>
     <input type="number" id="slabs" name="slabs">
     <br>
     <button onclick="calculate()">Calculate</button>
