--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The (Unofficial) Dnoate Minecraft Tree Calculator</title>
+    <title>Minecraft Tree Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>The (Unofficial) Dnoate Minecraft Tree Calculator</h1>
-    <label for="planks">Number of Acacia Planks:</label>
-    <input type="number" id="planks" name="planks" oninput="updatePlanksSlider()" min="0" max="2000">
-    <input type="range" id="planksSlider" name="planksSlider" oninput="updatePlanksInput()" min="0" max="2000">
+    <h1>Minecraft Tree Calculator</h1>
+    <label for="planks">Number of Planks:</label>
+    <input type="number" id="planks" name="planks" oninput="updatePlanksSlider(); calculate();" min="0" max="2000">
+    <input type="range" id="planksSlider" name="planksSlider" oninput="updatePlanksInput(); calculate();" min="0" max="2000">
     <br>
-    <label for="slabs">Number of Acacia Slabs:</label>
-    <input type="number" id="slabs" name="slabs" oninput="updateSlabsSlider()" min="0" max="2000">
-    <input type="range" id="slabsSlider" name="slabsSlider" oninput="updateSlabsInput()" min="0" max="2000">
+    <label for="slabs">Number of Slabs:</label>
+    <input type="number" id="slabs" name="slabs" oninput="updateSlabsSlider(); calculate();" min="0" max="2000">
+    <input type="range" id="slabsSlider" name="slabsSlider" oninput="updateSlabsInput(); calculate();" min="0" max="2000">
     <br>
-    <button onclick="calculate()">Calculate</button>
     <p id="result"></p>
 
     <script src="script.js"></script>
