--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <br>
     <p id="result"></p>
 
+    <footer>
+        <a href="https://www.youtube.com" target="_blank">
+            <img src="gfx/lars-youtube-footer.png" alt="YouTube" class="footer-image">
+            Watch me on YouTube!
+        </a>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
