--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Minecraft Tree Calculator</title>
+    <title>The (Unofficial) dnoate Minecraft Tree Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Minecraft Tree Calculator</h1>
-    <label for="planks">Number of Planks:</label>
+    <h1>The (Unofficial) dnoate Minecraft Tree Calculator</h1>
+    <label for="planks">Number of Acacia Planks:</label>
     <input type="number" id="planks" name="planks" oninput="updatePlanksSlider(); calculate();" min="0" max="2000">
     <input type="range" id="planksSlider" name="planksSlider" oninput="updatePlanksInput(); calculate();" min="0" max="2000">
     <br>
-    <label for="slabs">Number of Slabs:</label>
+    <label for="slabs">Number of Acacia Slabs:</label>
     <input type="number" id="slabs" name="slabs" oninput="updateSlabsSlider(); calculate();" min="0" max="2000">
     <input type="range" id="slabsSlider" name="slabsSlider" oninput="updateSlabsInput(); calculate();" min="0" max="2000">
     <br>
