--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="result"></p>
 
     <footer>
-        <a href="https://www.youtube.com" target="_blank">
+        <a href="https://www.youtube.com/@dnoate" target="_blank">
             <img src="gfx/lars-youtube-footer.png" alt="YouTube" class="footer-image">
             Watch me on YouTube!
         </a>
