--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
     <h1>The (Unofficial) dnoate Minecraft Tree Calculator</h1>
     <label for="planks">Number of Acacia Planks:</label>
-    <input type="number" id="planks" name="planks" oninput="updatePlanksSlider(); calculate();" min="0" max="2000">
-    <input type="range" id="planksSlider" name="planksSlider" oninput="updatePlanksInput(); calculate();" min="0" max="2000">
+    <input type="number" id="planks" name="planks" value="0" oninput="updatePlanksSlider(); calculate();" min="0" max="2000">
+    <input type="range" id="planksSlider" name="planksSlider" value="0" oninput="updatePlanksInput(); calculate();" min="0" max="2000">
     <br>
     <label for="slabs">Number of Acacia Slabs:</label>
-    <input type="number" id="slabs" name="slabs" oninput="updateSlabsSlider(); calculate();" min="0" max="2000">
-    <input type="range" id="slabsSlider" name="slabsSlider" oninput="updateSlabsInput(); calculate();" min="0" max="2000">
+    <input type="number" id="slabs" name="slabs" value="0" oninput="updateSlabsSlider(); calculate();" min="0" max="2000">
+    <input type="range" id="slabsSlider" name="slabsSlider" value="0" oninput="updateSlabsInput(); calculate();" min="0" max="2000">
     <br>
     <p id="result"></p>
 
